--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 
+<nav class="navbar">
+	<ul class="navbar__ul">
+		<a href="#"><li>View Music</li></a>
+		<a href="#"><li>Add Music</li></a>
+		<a href="#"><li>Profile</li></a>
+	</ul>
+</nav>
 
 </body>
 </html>
