Styled nav bar and began styling panels

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 
 <body>
 
-<nav class="navbar navbar-color navbar-margin">
+<nav class="navbar navbar-margin navbar-styling">
 	<ul class="navbar__ul">
-		<a href="#"><li>View Music</li></a>
-		<a href="#"><li>Add Music</li></a>
-		<a href="#"><li>Profile</li></a>
+		<li><a href="#">View Music</a></li>
+		<li><a href="#">Add Music</a></li>
+		<li><a href="#">Profile</a></li>
 	</ul>
 </nav>
 
 <div class="wrapper">
-	<div class="input-panel input-panel-color input-panel-margin">
+	<form class="input-panel input-panel-margin input-panel-styling">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
+	</form>
 
-	<div class="main-panel main-panel-color">
+	<div class="main-panel main-panel-styling">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
