--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
+  <link rel="stylesheet" type="text/css" href="sandbox.css">
 </head>
 
 <body>
@@ -18,14 +19,14 @@
 </nav>
 
 <div class="wrapper">
-	<form class="input-panel input-panel-margin input-panel-styling">
+	<div class="input-panel input-panel-margin input-panel-styling">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</form>
+	</div>
 
 	<div class="main-panel main-panel-styling">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
