Deleted sandbox.css file.  Coppied changes into main.css for mobile-first approach

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
-  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
-  <link rel="stylesheet" type="text/css" href="sandbox.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="sandbox.css"> -->
 </head>
 
 <body>
