--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
 
 <div class="wrapper">
 	<div class="input-panel input-panel-margin input-panel-styling">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<form class="form-wrapper">
+			<p>Song length:</p>
+			<input type="range" name="slider" id="slider">
+		</form>
 	</div>
 
 	<div class="main-panel main-panel-styling">
@@ -40,3 +38,4 @@
 
 </body>
 </html>
+
