discarded mobile design.  Added slider and dropdown lists

--- a/index.html
+++ b/index.html
@@ -20,12 +20,28 @@
 
 <div class="wrapper">
 	<div class="input-panel input-panel-margin input-panel-styling">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<form class="form">
+			<label>Song Length: </label>
+			<input type="range" name="slider" id="slider">
+
+			<label>Artist: </label>
+			<select name="select" class="select">
+			  <option value="artist1">Sufjan Stevens</option> 
+			  <option value="artist2">mewithoutYou</option>
+			  <option value="artist3">The Oh Hellos</option>
+			  <option value="artist4">This Will Destroy You</option>
+			  <option value="artist5">Miles Davis</option>
+			</select>
+
+			<label>Album: </label>
+			<select name="select" class="select">
+			  <option value="song1">Sufjan Stevens</option> 
+			  <option value="song2">mewithoutYou</option>
+			  <option value="song3">The Oh Hellos</option>
+			  <option value="song4">This Will Destroy You</option>
+			  <option value="song5">Miles Davis</option>
+			</select>
+		</form>
 	</div>
 
 	<div class="main-panel main-panel-styling">
