--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 </div>
+
+<script src="songs.js" type="text/javascript"></script>
 </body>
 </html>
 
