--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<label>Artist: </label>
 			<select name="select-artist" class="select">
-			  <option value="artist1">Sufjan Stevens</option> 
+			  <option value="artist1">Sufjan Stevens</option>
 			  <option value="artist2">mewithoutYou</option>
 			  <option value="artist3">The Oh Hellos</option>
 			  <option value="artist4">This Will Destroy You</option>
@@ -34,9 +34,9 @@
 
 			<label>Album: </label>
 			<select name="select-album" class="select">
-			  <option value="album1">Carrie and Lowell</option> 
+			  <option value="album1">Carrie and Lowell</option>
 			  <option value="album2">Age of Adz</option>
-			  <option value="album3">Brother, Sister</option> 
+			  <option value="album3">Brother, Sister</option>
 			  <option value="album4">Ten Stories</option>
 			  <option value="album5">Through the Deep, Dark Valley</option>
 			  <option value="album6">Dear Wormwood</option>
@@ -48,41 +48,38 @@
 
 			<!-- Divs around two checkbox-label pairs for flexbox reasons -->
 			<label>Genre: </label>
-			
+
 			<div class="checkbox-row">
 				<div><label><input type="checkbox" name="rock" value="rock"> Rock</label></div>
 				<div><label><input type="checkbox" name="classical" value="classical"> Classical</label></div>
 			</div>
-		
+
 			<div class="checkbox-row">
 				<div><label><input type="checkbox" name="pop" value="Pop"> Pop</label></div>
 				<div><label><input type="checkbox" name="jazz" value="Jazz"> Jazz</label></div>
 			</div>
-		
+
 			<div class="checkbox-row">
 				<div><label><input type="checkbox" name="blues" value="Blues"> Blues</label></div>
 				<div><label><input type="checkbox" name="hip-hop" value="Hip Hop"> Hip Hop</label></div>
 			</div>
 
 			<button type="submit" class="filter-button">Filter</button>
-			
+
 
 
 
 		</form>
 	</div>
 
-	<div class="main-panel main-panel-styling">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<div class="main-panel main-panel-styling" id="main-panel">
+
 	</div>
 </div>
 
 <script src="songs.js" type="text/javascript"></script>
 </body>
 </html>
+
+
 
