--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <nav class="navbar navbar-margin navbar-styling">
 	<ul class="navbar__ul">
-		<li><a href="#">View Music</a></li>
+		<li><a href="#" id="link__list-music">List Music</a></li>
 		<li>  |  </li>
-		<li><a href="#">Add Music</a></li>
+		<li><a href="#" id="link__add-music">Add Music</a></li>
 		<li>  |  </li>
-		<li><a href="#">Profile</a></li>
+		<li><a href="#" id="link__profile">Profile</a></li>
 	</ul>
 </nav>
 
+<section class="list-music">
 <div class="wrapper">
 	<div class="input-panel input-panel-margin input-panel-styling">
 		<form class="form">
@@ -67,10 +68,6 @@
 			</div>
 
 			<button type="submit" class="filter-button">Filter</button>
-
-
-
-
 		</form>
 	</div>
 
@@ -78,6 +75,20 @@
 
 	</div>
 </div>
+</section>
+
+<section class="hidden add-music">
+	<label for="song-name"><span>Song name:</span></label>
+	<input type="text" name="song-name">
+
+	<label for="artist"><span>Artist:</span></label>
+	<input type="text" name="artist">
+
+	<label for="album"><span>Album:</span></label>
+	<input type="text" name="album">
+
+	<input type="button" name="add" value="Add">
+</section>
 
 <script src="songs.js" type="text/javascript"></script>
 </body>
