--- a/index.html
+++ b/index.html
@@ -78,19 +78,23 @@
 </section>
 
 <section class="hidden add-music">
-	<label for="song-name"><span>Song name:</span></label>
-	<input type="text" name="song-name">
+	<div class="form__add-music">
+		<label for="song-name"><span>Song name:</span></label>
+		<input type="text" name="song-name">
 
-	<label for="artist"><span>Artist:</span></label>
-	<input type="text" name="artist">
+		<label for="artist"><span>Artist:</span></label>
+		<input type="text" name="artist">
 
-	<label for="album"><span>Album:</span></label>
-	<input type="text" name="album">
+		<label for="album"><span>Album:</span></label>
+		<input type="text" name="album">
 
-	<input type="button" name="add" value="Add">
+		<input type="button" name="add" value="Add">
+	</div>
 </section>
 
+<script src="/bower_components/jQuery/dist/jquery.js"></script>
 <script src="songs.js" type="text/javascript"></script>
+<script src="main.js"></script>
 </body>
 </html>
 
