add music to list music view when add button is clicked

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <section class="hidden add-music">
 	<div class="form__add-music">
 		<label for="song-name"><span>Song name:</span></label>
-		<input type="text" name="song-name">
+		<input type="text" name="song">
 
 		<label for="artist"><span>Artist:</span></label>
 		<input type="text" name="artist">
