changed link styling in navbar links based on current page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-margin navbar-styling">
 	<ul class="navbar__ul">
-		<li><a href="#" id="link__list-music">List Music</a></li>
+		<li><a href="#" id="link__list-music" class="viewing">List Music</a></li>
 		<li>  |  </li>
 		<li><a href="#" id="link__add-music">Add Music</a></li>
 		<li>  |  </li>
@@ -22,7 +22,7 @@
 <section class="list-music">
 <div class="wrapper">
 	<div class="input-panel input-panel-margin input-panel-styling">
-		<form class="form">
+		<div class="form">
 			<label>Song Length: </label>
 			<input type="range" name="slider" id="slider">
 
@@ -68,7 +68,7 @@
 			</div>
 
 			<button type="submit" class="filter-button">Filter</button>
-		</form>
+		</div>
 	</div>
 
 	<div class="main-panel main-panel-styling" id="main-panel">
