--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
 	</div>
 </section>
 
-<script src="/bower_components/jQuery/dist/jquery.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
 <script src="songs.js" type="text/javascript"></script>
 <script src="main.js"></script>
 </body>
