gave initial height to main panel and input panel

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 		</div>
 	</div>
 
-	<div class="main-panel main-panel-styling" id="main-panel">
+	<div class="main-panel main-panel-styling" id="main-panel"></div>
 
-	</div>
 </div>
 </section>
 
